dding logging in, logging out, and signing up components with firebase, yup, formik,

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,4 @@
-* {
-  box-sizing: border-box;
-  text-decoration: none;
-}
-a:visited {
-  text-decoration: none;
-}
-
-.App {
-  text-align: center;
+.imgsize {
+  height: 90vh;
+  width: 100%;
 }
