--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -5,7 +5,7 @@ $underline: rgb(236, 239, 241);
   padding: 30px 0;
   display: flex;
   width: 100%;
-  height: 80px;
+  height: 10vh;
 
   justify-content: center;
   background-color: #fff;
@@ -17,7 +17,7 @@ $underline: rgb(236, 239, 241);
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 1200px;
+    width: 1000px;
   }
 
   .logoContainer {
@@ -36,20 +36,38 @@ $underline: rgb(236, 239, 241);
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
+  }
+  .optionLink {
+    padding: 10px 19px;
+    font-weight: bold;
+    cursor: pointer;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    &:hover {
+      color: $purple;
+      transition: 0.1s ease-in;
+      border-bottom: 2px solid $purple;
+    }
+  }
 
-    .optionLink {
-      padding: 10px 15px;
+  .loginContainer {
+    font-weight: bold;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    width: 30%;
+    justify-content: space-evenly;
+
+    .btn-header {
+      padding: 10px;
+      border: none;
+      background: #6433ff;
+      border-radius: 4px;
+      color: white;
       font-weight: bold;
       cursor: pointer;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      &:hover {
-        color: $purple;
-        transition: 0.1s ease-in;
-        border-bottom: 1px solid $purple;
-      }
     }
   }
 }
