--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -25,12 +25,16 @@ $underline: rgb(236, 239, 241);
   align-items: center;
   width: 1000px;
 }
+
 .mobileNav {
   width: 100%;
   height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @media only screen and (max-width: 800px) {
+    z-index: 1;
+  }
 }
 
 .logoContainer {
