Bus class changed to active class. PriceChangeIntervals changed to mapping through each interval

--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -19,7 +19,7 @@
   background: #ffffff;
   cursor: pointer;
 }
-.bus {
+.active {
   color: #6433ff;
   border-top: 2px solid #6433ff;
   background: white;
