--- a/src/components/auth/Signin-styles.scss
+++ b/src/components/auth/Signin-styles.scss
@@ -24,6 +24,12 @@ $underline: rgb(236, 239, 241);
   background: white;
   border-radius: 5px;
 }
+//this class is used for error functonality
+.red {
+  color: red;
+  font-size: 30px;
+  height: 40vh;
+}
 .form-container {
   z-index: 10;
   margin-top: -140px;
