.active class color changed

--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -14,7 +14,7 @@
   padding: 5px;
   margin: 0 5px;
   font-size: 14px;
-  color: purple;
+  color: #6433ff;
   cursor: pointer;
   background: #ffffff;
   cursor: pointer;
