--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -16,6 +16,12 @@
   padding: 10px;
   margin-left: 12px;
 }
+.areaChartPercent {
+  font-size: 25px;
+  color: #4a4a4a;
+  padding: 5px;
+  margin-left: 5px;
+}
 
 .chartToolBar {
   text-align: right;
@@ -47,4 +53,10 @@
   border-top: 2px solid #6433ff;
   background: white;
   border-bottom: none;
+}
+
+.areaChartHeader {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
